<resources>
    <string name="app_name">Polaris</string>

    <string name="collection">Collection</string>
    <string name="collection_browse_directories">Browse Directories</string>
    <string name="collection_random_albums">Random Albums</string>
    <string name="collection_recently_added">Recently Added</string>
    <string name="collection_playlists">Playlists</string>

    <string name="browse_error">An error occurred while listing content</string>
    <string name="browse_error_retry">Retry</string>
    <string name="browse_disc_number">Disc %1$d</string>

    <string name="queue">Queue</string>
    <string name="queue_empty">Make a playlist by swiping music from your collection to here.</string>
    <string name="queue_downloading">Downloading</string>
    <string name="queue_cached">Cached Locally</string>

    <string name="now_playing">Now Playing</string>
    <string name="player_artwork">Album Artwork</string>
    <string name="player_previous_track">Previous Track</string>
    <string name="player_next_track">Next Track</string>
    <string name="player_play_pause">Play/Pause</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_opening">Opening…</string>
    <string name="player_buffering">Buffering…</string>

    <string name="details">Details</string>
    <string name="details_unknown">[unknown]</string>
    <string name="details_title">Title</string>
    <string name="details_album">Album</string>
    <string name="details_year">Year</string>
    <string name="details_artist">Artist</string>
    <string name="details_album_artist">Album Artist</string>
    <string name="details_track_number">Track Number</string>
    <string name="details_disc_number">Disc Number</string>
    <string name="details_duration">Duration</string>
    <string name="details_path">Path</string>

    <string name="pref_server_url">Server address</string>
    <string name="pref_username">Username</string>
    <string name="pref_password">Password</string>
    <string name="pref_offline">Offline Mode</string>
    <string name="pref_num_songs_preload">Songs to preload</string>
    <string name="pref_offline_cache_size">Offline cache size</string>
    <string name="pref_theme">Theme</string>

    <string name="pref_key_server_url">server</string>
    <string name="pref_key_username">username</string>
    <string name="pref_key_password">password</string>
    <string name="pref_key_offline">offline</string>
    <string name="pref_key_num_songs_preload">num_songs_preload</string>
    <string name="pref_key_offline_cache_size">offline_cache_size</string>
    <string name="pref_key_theme">theme</string>

    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="shuffle">Shuffle</string>

    <string name="ordering">Ordering</string>
    <string name="ordering_sequence">Default</string>
    <string name="ordering_repeat_one">Repeat One</string>
    <string name="ordering_repeat_all">Repeat All</string>

    <string name="add_to_queue">Queue</string>
    <string name="queued">Added to queue</string>
    <string name="queuing">Fetching…</string>
    <string name="queuing_error">Something went wrong</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="playback_error">A media playback error occurred</string>

    <string name="media_player_service_description">Audio playback service for Polaris</string>
    <string name="download_service_description">Music download service for Polaris</string>
    <string name="scrobble_service_description">Last.fm scrobbling service for Polaris</string>

    <string name="media_notifications_channel_description">Polaris audio playback controls</string>
</resources>
