<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		app:showAsAction="ifRoom"
		android:id="@+id/action_ordering"
		android:title="@string/ordering"
		android:icon="@drawable/ic_reorder_white_24dp">
		<menu>
			<item
				app:showAsAction="never|withText"
				android:id="@+id/action_ordering_sequence"
				android:title="@string/ordering_sequence"
				android:icon="@drawable/ic_reorder_black_24dp"/>
			<item
				app:showAsAction="never|withText"
				android:id="@+id/action_ordering_repeat_one"
				android:title="@string/ordering_repeat_one"
				android:icon="@drawable/ic_repeat_one_black_24dp"/>
			<item
				app:showAsAction="never|withText"
				android:id="@+id/action_ordering_repeat_all"
				android:title="@string/ordering_repeat_all"
				android:icon="@drawable/ic_repeat_black_24dp"/>
			<item
				app:showAsAction="never|withText"
				android:id="@+id/action_ordering_random"
				android:title="@string/ordering_random"
				android:icon="@drawable/ic_shuffle_black_24dp"/>
		</menu>
	</item>
	<item
		app:showAsAction="ifRoom"
		android:id="@+id/action_shuffle"
		android:title="@string/shuffle"
		android:icon="@drawable/ic_swap_vert_white_24dp"/>
	<item
		app:showAsAction="ifRoom"
		android:id="@+id/action_clear"
		android:title="@string/clear"
		android:icon="@drawable/ic_delete_white_24dp"/>
</menu>
