<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <View
        android:id="@+id/top_divider"
        style="@style/DialogDivider"
        android:layout_width="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <TextView
                style="@style/DetailsLabel"
                android:text="@string/details_path" />

            <TextView
                android:id="@+id/path"
                style="@style/DetailsValue"
                tools:text="Music/TOOL/Fear Inoculur/09 - TOOL - 7emptest.m4a" />

            <Space
                style="@style/DetailsSpace"
                android:layout_width="match_parent" />

            <TextView
                style="@style/DetailsLabel"
                android:text="@string/details_album_artist" />

            <TextView
                android:id="@+id/album_artist"
                style="@style/DetailsValue"
                tools:text="TOOL" />

            <Space
                style="@style/DetailsSpace"
                android:layout_width="match_parent" />

            <TextView
                style="@style/DetailsLabel"
                android:text="@string/details_artist" />

            <TextView
                android:id="@+id/artist"
                style="@style/DetailsValue"
                tools:text="TOOL" />

            <Space
                style="@style/DetailsSpace"
                android:layout_width="match_parent" />

            <TextView
                style="@style/DetailsLabel"
                android:text="@string/details_album" />

            <TextView
                android:id="@+id/album"
                style="@style/DetailsValue"
                tools:text="Fear Incolulum" />

            <Space
                style="@style/DetailsSpace"
                android:layout_width="match_parent" />

            <TextView
                style="@style/DetailsLabel"
                android:text="@string/details_title" />

            <TextView
                android:id="@+id/title"
                style="@style/DetailsValue"
                tools:text="7emptest" />

            <Space
                style="@style/DetailsSpace"
                android:layout_width="match_parent" />

            <TextView
                style="@style/DetailsLabel"
                android:text="@string/details_disc_number" />

            <TextView
                android:id="@+id/disc_number"
                style="@style/DetailsValue"
                tools:text="1" />

            <Space
                style="@style/DetailsSpace"
                android:layout_width="match_parent" />

            <TextView
                style="@style/DetailsLabel"
                android:text="@string/details_track_number" />

            <TextView
                android:id="@+id/track_number"
                style="@style/DetailsValue"
                tools:text="9" />

            <Space
                style="@style/DetailsSpace"
                android:layout_width="match_parent" />

            <TextView
                style="@style/DetailsLabel"
                android:text="@string/details_duration" />

            <TextView
                android:id="@+id/duration"
                style="@style/DetailsValue"
                tools:text="15:45" />

            <Space
                style="@style/DetailsSpace"
                android:layout_width="match_parent" />

            <TextView
                style="@style/DetailsLabel"
                android:text="@string/details_year" />

            <TextView
                android:id="@+id/year"
                style="@style/DetailsValue"
                tools:text="15:45" />

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/bottom_divider"
        style="@style/DialogDivider"
        android:layout_width="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
